style.css
/* ... */
#btn:hover::after {
    bottom: 0;
    border-radius: 0;
}

#btn span {
    color: #fff;
    position: relative; 
    z-index: 1;
    font-size: 16px;
}
/* Hide hamburger on desktop */
#menu-toggle {
    display: none !important;
    flex-direction: column;
    background: transparent;
    border: none;
    cursor: pointer;
    color: #fff;
    font-size: 1.3rem;
}
#close-menu{
     display: none;
    flex-direction: column;
    background: transparent;
    cursor: pointer;
    color: #fff;
    font-size: 1rem;
border: 2px solid #fffefe;
   border-radius: 50%;
   width: 30px;
   height: 30px;
}
.video-container {
  position: relative;
  padding: 2em;
  overflow: hidden;
}

/* Video */
.video-container video {
  width: 100%;
  max-width: 1100px;
  max-height: 400px;
 margin:  0 auto;
  object-fit: cover;
  display: block;
  border-radius: 10px;
}
.center-text { 
    font-size: clamp(1.5rem, 5vw, 4rem);
    color: #fff;
    font-weight: 800;
    width: 80%;
    text-shadow: 1px 5px 3px black;
    z-index: 11;  
    text-align: center;
    position: absolute;
    top: 50%;              /* 👈 vertical center */
    left: 50%;             /* 👈 horizontal center */
    transform: translate(-50%, -50%);
}
/* Overlay Image */
.overlap-img {
  position: absolute;
  top: 55%;              
  left: 83%;          
  transform: translate(-50%, -50%);
  width: 40%;           
  max-width: 500px;
  height: auto;          
  z-index: 10;
   overflow: hidden;
  filter: drop-shadow(2px 2px 4px #818181);
  animation: slideIn 2s cubic-bezier(0.44, 0.01, 0.13, 1.1);
}
.overlap-img .loaded{
    left: 82%;
}
@keyframes slideIn {
  0% {
    left: 100%;   
    opacity: 0;
    
  }
  100% {
    left: 82%; 
    opacity: 1;
  }
}
#background-image{
     height: auto;
    background-image: url('unsplash_3leBubkp5hk\ \(1\).webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
      position: relative;
      padding: 3em;
}
#background-image h1{
    font-size: clamp(1.8rem, 5vw, 4rem);
    font-weight: 600;
    text-align: center;
    padding: 2em 2em;
    color: #fff;
    z-index: 10;
    position: relative;
    text-shadow: 23px 26px  5px #00000048;
}
.text-image img{
    width: 50%;
    max-width: 500px;
  position: absolute;
}
#second-img{
top: 10%;
left: 40%;
}
#first-img { 
  
    top: 7%;
    left: 28%;
      transform: translateX(50%) rotate(-60deg);
  animation: slideIn1 2s cubic-bezier(0.44, 0.01, 0.13, 1.1) both;
  animation-timeline: view(50% 20%);
}
@keyframes slideIn1 {
  0% {
    transform: translateX(50%) rotate(-60deg);
  opacity: 0;
  }
  100% {
    transform: translateX(0) rotate(-37deg);
    opacity: 1;
  }
}
#background-image2{
     height: 100%;
    background-image: url('unsplash_3leBubkp5hk\ \(2\).webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
}
.card-text{
    display: flex;
    align-items: center;
    gap: 5rem;
    color: #fff;
}
#about{
   padding-top: 1em;
  width: 60%;
    letter-spacing: 14%;
}
#about h2{
    font-size: clamp(1.5rem,5vw,1rem);
    font-weight: 400;
}
.text{
    text-align: center;
    padding: 1em 2em 4em 2em;
    font-size: 2rem;
    color: #fff;
    font-size: 500;
    animation:  textslid 2s both;
    animation-timeline: view(50% 5%);
    
}
@keyframes textslid {
    0%{
        transform: translateY(100%);
        opacity: 0;
    }
     100%{
        transform: translateY(0);
    }
}
.card {
  position: relative;
 max-width: 500px;
  width: 100%;
  height: auto;
  min-height:  350px;
  border-radius: 0 20px 20px 0px  ;
  background: linear-gradient(135deg, #cfd8dc, #2b7a9a);
  padding: 20px;
  color: white;
}

/* Title */
.card h2 {
  position: relative;
  z-index: 2;
  font-size: clamp(1.5rem, 5vw, 2rem);
  font-weight: 600;
  text-align: center;
  text-shadow: 4px 5px #00000048;
}

/* Bottle */
.bottle {
  position: absolute;
  right: 90px;
  top: -90px;
  max-width: 400px;
width: 90%;
  z-index: 1;
  animation:  slideIn2 2s cubic-bezier(0.44, 0.01, 0.13, 1.1) both;
  animation-timeline: view(50% auto);
}
@keyframes slideIn2 {
    0%{
        opacity: 0;
        display: none;
        transform: translateY(-80%);
    }
    100%{
        transform: translateY(0);
    }
}

/* Curve */
#svg-Curve{
    position: absolute;
    max-width: 700px;
    width: 100%;
    top: 2%;
    left: 0;
    height: auto;
}

/* Play button */
.play-btn {
  position: absolute;
  top: 15px;
  right: 15px;
  width: 55px;
  height: 55px;
  background: #d9e6ec;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  font-size: 20px;
  cursor: pointer;
  border: 3px solid #1A7297;
}

/* Avatars */
.avatars {
  position: absolute;
  bottom: 15px;
  right: 25px;
  display: flex;
  align-items: center;
}

.avatars img {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  margin-left: -15px;
  border: 2px solid white;
}

.avatars span {
  margin-left: 5px;
}
#background-image3{
    height: 100%;
    background-image: url('unsplash__NbxQ4mArcU.webp');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    padding: 2em;
}

#product-card {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr)); /* responsive columns */
  gap: 2em; /* space between cards */
  justify-items: center; /* center cards horizontally */
  padding: 3em;
}

.product-text{
    width: 100%;
    padding-top: 3em;
    text-align: center;
    color: #fff;
    text-shadow: 2px 3px 5px #00000048;
    font-weight: 600;
    animation: text-appear both;
    animation-timeline: view();
    animation-range:  enter 20% cover 100vh;
}
@keyframes  text-appear {
    from{
        opacity: 0;
        transform: translateY(100px);
    }
    to{
        opacity: 1;
        transform: translateY(0);
    }
}
/* ... */

